--- a/iblogs/template/base.html
+++ b/iblogs/template/base.html
@@ -2,13 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{%block title%}
+    <title>{%block title%} {%endblock%}</title>
 
-    {%endblock%}</title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static  'css/style.css  ' %}">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </head>
 <body>
-this is navebar
+
+{% include 'header.html' %}
+
 {% block content %}
+
+
 {% endblock%}
+
+<script>
+    M.AutoInit();
+</script>
 </body>
 </html>
