--- a/iblogs/template/base.html
+++ b/iblogs/template/base.html
@@ -11,7 +11,8 @@
 
     {% load static %}
     <link rel="stylesheet" href="{% static  'css/style.css  ' %}">
-
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css'%}">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
@@ -28,5 +29,15 @@
 <script>
     M.AutoInit();
 </script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+
+<script>
+    $(document).ready(function(){
+  $(".owl-carousel").owlCarousel();
+});
+</script>
+
+
 </body>
 </html>
