--- a/iblogs/template/header.html
+++ b/iblogs/template/header.html
@@ -8,10 +8,10 @@
 <nav class="bg-primary">
   <div class="container">
       <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">BlogMingle</a>
+    <a href="/home" class="brand-logo">BlogMingle</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">ABOUT</a></li>
-      <li><a href="badges.html">ADMIN</a></li>
+      <li><a href="/about">ABOUT</a></li>
+      <li><a href="/admin">ADMIN</a></li>
       <!-- Dropdown Trigger -->
       <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">CATEGORY<i class="material-icons right">arrow_drop_down</i></a></li>
     </ul>
