[7th Commit] Creation of User Interface Part 03 Include (footer mediam completion , header completion , drop down Category completion )

--- a/iblogs/template/base.html
+++ b/iblogs/template/base.html
@@ -26,6 +26,9 @@
 
 {% endblock%}
 
+
+{% include 'footer.html' %}
+
 <script>
     M.AutoInit();
 </script>
@@ -34,7 +37,30 @@
 
 <script>
     $(document).ready(function(){
-  $(".owl-carousel").owlCarousel();
+  $(".owl-carousel").owlCarousel(
+      {
+          loop:true,
+          autoplay:true,
+          nav:false,
+          responsiveClass:true,
+          responsive : {
+    0 : {
+        items : 1,
+        nav: true,
+    },
+
+    600 : {
+        items : 3,
+        nav : false,
+    },
+    1000 : {
+        items : 4,
+        nav:true,
+        loop:false
+    }
+}
+      }
+  );
 });
 </script>
 
