--- a/iblogs/template/home.html
+++ b/iblogs/template/home.html
@@ -12,7 +12,7 @@
             
                 <div class="card item" style="margin-left: 10px;">
                 <div class="img-container">
-                    <img src="/media/{{ cat.image }}" class="responsive-img" style="width: 250px;height: 250px;margin-left: 100px">
+                    <img src="/media/{{ cat.image }}" class="responsive-img" style="width: 250px;height: 250px;margin-left: 50px">
                 </div>
                 <div class="card-content">
                     <div class="card-title">
@@ -20,7 +20,7 @@
                     </div>
                     <p class="truncate">{{ cat.description }}</p>
                     <div class="container center-align mt20" >
-                    <a class="btn bg-primary" href=""> VIEW</a>
+                    <a class="btn bg-primary" href="/category/{{ cat.url }}"> VIEW</a>
                 </div>
                 </div>
 
