--- a/iblogs/template/posts.html
+++ b/iblogs/template/posts.html
@@ -7,7 +7,7 @@
 <div class="container-custom">
 
 <div class="row">
-    <div class="col s12 12 112">
+    <div class="col s12 m10">
 
         <h3>{{ post.title }}</h3>
 
@@ -19,6 +19,29 @@
         <p>
             {{ post.content | safe}}
         </p>
+
+    </div>
+    <div class="col s12 m2">
+
+        {% for cat in cats %}
+
+                <div class="card item" style="margin-left: 10px;">
+                <div class="img-container">
+                    <img src="/media/{{ cat.image }}" class="responsive-img" style="width: 100px;height: 100px;margin-left: 50px">
+                </div>
+                <div class="card-content">
+                    <b>
+                        {{ cat.title}}
+                    </b>
+                    <p class="truncate">{{ cat.description }}</p>
+                    <div class="container center-align mt20" >
+                    <a class="btn bg-primary" href="/category/{{ cat.url }}"> VIEW</a>
+                </div>
+                </div>
+
+                </div>
+
+            {% endfor %}
 
     </div>
 </div>
