--- a/iblogs/template/posts.html
+++ b/iblogs/template/posts.html
@@ -47,5 +47,12 @@
 </div>
 
 </div>
+<div class="container">
+    <hr>
+
+    <p><a style="margin-left: 450px;" class="btn bg-primary" href="/comment/{{ post.url }}"> Add Comment</a> </p>
+    <br>
+    <br>
+</div>
 
 {% endblock %}
